[package]
name = "all_shortest_path"
version = "0.1.0"
edition = "2021"
authors = ["Filippo Ranza <filipporanza@gmail.com>"]
license = "MIT"
description = "A simple Floyd-Warshall algorithm implementation"
repository = "https://github.com/FilippoRanza/all_shortest_path"
keywords = ["floyd-warshall", "graph", "shortest-path", "path"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
num-traits = "0.2"

